--- a/notebooks/1-get_mibig_smiles.ipynb
+++ b/notebooks/1-get_mibig_smiles.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "detailed-chile",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "('/mnt/scratch/louwe015/mibig_json_2.0/BGC0000020.json', True)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "competent-january",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "  'publications': ['pubmed:12060743']}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "afraid-enemy",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "severe-hygiene",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "processed-academy",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "qualified-porcelain",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        " ('BGC0002036', 'dehydrofosmidomycin', '', '10.1038/s41589-019-0343-'))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,6 +193,27 @@
     "# sort\n",
     "info_list.sort()\n",
     "info_list[0], info_list[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "nasty-floor",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2689"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(info_list)"
    ]
   },
   {
