deepcopy dicts so there are no shallow copy problems when working in the notebook

--- a/notebooks/4-get_mibig_antismash_classes.ipynb
+++ b/notebooks/4-get_mibig_antismash_classes.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "certified-cable",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,13 @@
     "import urllib\n",
     "import glob\n",
     "import json\n",
-    "import time"
+    "import time\n",
+    "from copy import deepcopy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "medium-gothic",
    "metadata": {},
    "outputs": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "fixed-ability",
    "metadata": {},
    "outputs": [
@@ -98,7 +99,7 @@
        "   '0'])]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "offshore-sunglasses",
    "metadata": {},
    "outputs": [
@@ -261,7 +262,7 @@
       "No AS record for BGC0001974_kainic acid\n",
       "No AS record for BGC0001997_capsidiol\n",
       "Recorded 1878/2112 antismash classes. Missing 234\n",
-      "Took 20.06 minutes\n"
+      "Took 11.13 minutes\n"
      ]
     }
    ],
@@ -269,7 +270,8 @@
     "all_as_classes = []\n",
     "mibig_as_classes = {}\n",
     "start = time.time()\n",
-    "for bgc_id, vals in mibig_dict.items():\n",
+    "local_mibig_dict = deepcopy(mibig_dict)  # avoid annoying things when rerunning notebook\n",
+    "for bgc_id, vals in local_mibig_dict.items():\n",
     "    # fetch json of antismash generated result\n",
     "    bgc_num = bgc_id.partition('_')[0]\n",
     "    url = \"https://mibig.secondarymetabolites.org/repository/{}/generated/{}.1.region001.json\".format(bgc_num, bgc_num)\n",
@@ -304,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "interior-tournament",
    "metadata": {},
    "outputs": [
@@ -323,7 +325,7 @@
        " 'T1PKS']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "moved-shoulder",
    "metadata": {},
    "outputs": [
@@ -350,7 +352,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['compound_name', 'class:subclass', 'AS_classes', 'smiles', 'inchi_key', 'kingdom', 'superclass', 'class', 'subclass', 'direct_parent', 'class_results', 'superclass_results', 'pathway_results', 'isglycoside']\n"
+      "['compound_name', 'class:subclass', 'AS_classes', 'smiles', 'inchi_key', 'kingdom', 'superclass', 'class', 'subclass', 'direct_parent', 'class_results', 'superclass_results', 'pathway_results', 'isglycoside']\n",
+      "BGC0002036_dehydrofosmidomycin\tOther:\tphosphonate\tC(C=CP(=O)(O)O)N(C=O)O\tYTTBDWKRMPYBDN-UHFFFAOYSA-N\t\t\t\t\t\t\t\t\t0\n",
+      "\n"
      ]
     }
    ],
@@ -359,12 +363,16 @@
     "header_split = header.strip().split('\\t')\n",
     "new_header = header_split[:2] + [\"AS_classes\"] + header_split[2:]\n",
     "print(new_header)\n",
+    "local_mibig_as_classes = deepcopy(mibig_as_classes)  # avoid annoying things when rerunning notebook\n",
     "with open(out_file, 'w') as outf:\n",
     "    outf.write(\"{}\\n\".format('\\t'.join(new_header)))\n",
-    "    for key, vals in mibig_as_classes.items():\n",
+    "    for key, vals in local_mibig_as_classes.items():\n",
     "        as_classes = vals.pop(-1)\n",
     "        classes = vals.pop(0)\n",
-    "        outf.write(\"{}\\t{}\\t{}\\t{}\\n\".format(key, classes, as_classes, '\\t'.join(vals)))"
+    "        out_str = \"{}\\t{}\\t{}\\t{}\\n\".format(key, classes, as_classes, '\\t'.join(vals))\n",
+    "        outf.write(out_str)\n",
+    "\n",
+    "print(out_str)  # example"
    ]
   }
  ],
