update naming output table

--- a/notebooks/4-get_mibig_antismash_classes.ipynb
+++ b/notebooks/4-get_mibig_antismash_classes.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "certified-cable",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "fixed-ability",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "   '0'])]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "handy-smell",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "'BGC0000002'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "saving-tokyo",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "religious-invasion",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "   'tool': ['antismash']}}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "offshore-sunglasses",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
       "No AS record for BGC0001974_kainic acid\n",
       "No AS record for BGC0001997_capsidiol\n",
       "Recorded 1878/2112 antismash classes. Missing 234\n",
-      "Took 11.13 minutes\n"
+      "Took 16.89 minutes\n"
      ]
     }
    ],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "interior-tournament",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
        " 'T1PKS']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
+   "id": "sustainable-advertiser",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['compound_name', 'class:subclass', 'as_classes', 'smiles', 'inchi_key', 'kingdom', 'superclass', 'class', 'subclass', 'direct_parent', 'class_results', 'superclass_results', 'pathway_results', 'isglycoside']\n",
+      "['compound_name', 'class:subclass', 'as_classes', 'smiles', 'inchi_key', 'cf_kingdom', 'cf_superclass', 'cf_class', 'cf_subclass', 'cf_direct_parent', 'npc_class', 'npc_superclass', 'npc_pathway', 'npc_isglycoside']\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_file = os.path.join(out_base, \"MIBiG2.0_compounds_with_AS_BGC_CF_NPC_classes.txt\")\n",
+    "header_split = header.strip().split('\\t')\n",
+    "new_header = header_split[:2] + [\"as_classes\"] + header_split[2:]\n",
+    "print(new_header)\n",
+    "adjusted_header = new_header[:5]\n",
+    "adjusted_header.extend([f'cf_{elem}' for elem in new_header[5:10]])\n",
+    "adjusted_header.extend([f'npc_{elem.split(\"_\")[0]}' for elem in new_header[10:]])\n",
+    "assert len(adjusted_header) == len(new_header)\n",
+    "print(adjusted_header)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "moved-shoulder",
    "metadata": {},
    "outputs": [
@@ -352,20 +379,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['compound_name', 'class:subclass', 'AS_classes', 'smiles', 'inchi_key', 'kingdom', 'superclass', 'class', 'subclass', 'direct_parent', 'class_results', 'superclass_results', 'pathway_results', 'isglycoside']\n",
       "BGC0002036_dehydrofosmidomycin\tOther:\tphosphonate\tC(C=CP(=O)(O)O)N(C=O)O\tYTTBDWKRMPYBDN-UHFFFAOYSA-N\t\t\t\t\t\t\t\t\t0\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "out_file = os.path.join(out_base, \"All_MIBiG_compounds_with_AS_BGC_CF_NPC_classes.txt\")\n",
-    "header_split = header.strip().split('\\t')\n",
-    "new_header = header_split[:2] + [\"AS_classes\"] + header_split[2:]\n",
-    "print(new_header)\n",
     "local_mibig_as_classes = deepcopy(mibig_as_classes)  # avoid annoying things when rerunning notebook\n",
     "with open(out_file, 'w') as outf:\n",
-    "    outf.write(\"{}\\n\".format('\\t'.join(new_header)))\n",
+    "    outf.write(\"{}\\n\".format('\\t'.join(adjusted_header)))\n",
     "    for key, vals in local_mibig_as_classes.items():\n",
     "        as_classes = vals.pop(-1)\n",
     "        classes = vals.pop(0)\n",
